# magic-prompt

./: README.md  pyproject.toml
.github/workflows/: pypi-deploy.yml
src/magic_prompt/: app.py  cli.py  config.py  groq_client.py
