[project]
name = "magic-prompt"
version = "0.1.0"
description = "TUI app that enriches prompts using Groq API and project context"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
]

[project.scripts]
magic-prompt = "magic_prompt.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magic_prompt"]
